Align class fixed

--- a/Wakkos-CSS-Framework/scss/layout/_sitio.scss
+++ b/Wakkos-CSS-Framework/scss/layout/_sitio.scss
@@ -154,30 +154,22 @@ main{
 
 //Esto es para que cuando edites la posición de una imagen en una entrada se alinee correctamente
 
-.alignright {
-        float: right;
-}
-
-.alignleft {
-        float: left;
-}
-
-.aligncenter {
-        display: block;
-        margin-right: auto;
-        margin-left: auto;
-}
 
 .alignright, a .alignright {
         float: right;
+        margin-left: 1em;
+        margin-bottom: 1em;
 }
 
 .alignleft, a .alignleft {
         float: left;
+        margin-right: 1em;
+        margin-bottom: 1em;
 }
 
 .aligncenter, a .aligncenter {
         display: block;
         margin-right: auto;
         margin-left: auto;
+        margin-bottom: 1em;
 }
